[gd_scene load_steps=34 format=3 uid="uid://cwdo73t7wn5pp"]

[ext_resource type="Texture2D" uid="uid://bqi1quc2f0tx1" path="res://assets/SpriteSheet.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://c08yjacbakryb" path="res://scripts/player/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://7xp6tv2fkwuf" path="res://scripts/weapons/gun.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://dk4jv4k8n6es5" path="res://scripts/weapons/turret.gd" id="6_fjrip"]
[ext_resource type="Texture2D" uid="uid://muxb10dn58dn" path="res://assets/Separated/turret.png" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://p4g4lnfxjftj" path="res://scripts/player/health_component.gd" id="8_smehm"]
[ext_resource type="Script" uid="uid://7vhf7tvcm6it" path="res://scripts/player/ability.gd" id="9_ur7pv"]
[ext_resource type="Material" uid="uid://sju853f7lvi8" path="res://shaders/freeze_material.tres" id="9_y4r1p"]
[ext_resource type="Material" uid="uid://b1lf7fv1llupn" path="res://shaders/poison_material.tres" id="10_d2wvv"]
[ext_resource type="AudioStream" uid="uid://bux0mdx48mneh" path="res://assets/Audios/Shoot.wav" id="10_y4r1p"]
[ext_resource type="Material" uid="uid://cy47t6cojlqrw" path="res://shaders/burn_material.tres" id="11_3v2ag"]
[ext_resource type="AudioStream" uid="uid://c8cwf2bwmi50v" path="res://assets/Audios/Hit.wav" id="11_d2wvv"]
[ext_resource type="AudioStream" uid="uid://cpdidnmdvil43" path="res://assets/Audios/empty-gun-shot-6209.mp3" id="13_jej6c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("1_3vyb7")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("1_3vyb7")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}],
"loop": true,
"name": &"invis_idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}],
"loop": true,
"name": &"invis_move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 3.0
height = 10.0

[sub_resource type="Gradient" id="Gradient_jej6c"]
offsets = PackedFloat32Array(0.016129032, 0.8064516, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d2wvv"]
gradient = SubResource("Gradient_jej6c")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.517094, 0.52136755)
fill_to = Vector2(0.76495725, 0.7777778)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 100
scale = Vector2(1.2, 1.2)
collision_layer = 2
collision_mask = 25
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8.333333)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.11764706)
z_index = -1
position = Vector2(7.1054274e-15, 0)
scale = Vector2(0.76282054, 0.75000006)
texture = ExtResource("1_3vyb7")
region_enabled = true
region_rect = Rect2(201.99591, 204.99461, 12.041901, 5.0242004)

[node name="Gun" type="Node2D" parent="."]
position = Vector2(0.8333333, -4.1666665)
scale = Vector2(0.8, 0.8)
script = ExtResource("3_qhqgy")

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
position = Vector2(3.5714285, 4.768371e-07)
texture = ExtResource("1_3vyb7")
region_enabled = true
region_rect = Rect2(8, 104, 16, 16)

[node name="Muzzle" type="Marker2D" parent="Gun"]
position = Vector2(4.9999995, -0.59523785)
scale = Vector2(0.99999976, 0.99999976)

[node name="SFX_Shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_y4r1p")
bus = &"SFX"

[node name="SFX_Shoot_Shotgun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_y4r1p")
bus = &"SFX"

[node name="SFX_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_d2wvv")
volume_db = -10.0
bus = &"SFX"

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.9254902, 0.8745098, 0.39215687, 1)
shadow_enabled = true
texture = SubResource("GradientTexture2D_d2wvv")
texture_scale = 0.5

[node name="Turret" type="Node2D" parent="."]
position = Vector2(-5, -5)
script = ExtResource("6_fjrip")

[node name="TurretHead" type="Node2D" parent="Turret"]
position = Vector2(-2.4666655, 0.4333334)

[node name="VisualRoot" type="Node2D" parent="Turret/TurretHead"]

[node name="Backpack" type="Sprite2D" parent="Turret/TurretHead/VisualRoot"]
z_index = -2
rotation = -1.5707964
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_tuyoq")
region_enabled = true
region_rect = Rect2(9, 9, 14, 14)

[node name="TurretSprite" type="Sprite2D" parent="Turret/TurretHead/VisualRoot"]
z_index = -1
position = Vector2(-1.6666682, -0.8333335)
rotation = 3.1415927
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_tuyoq")
region_enabled = true
region_rect = Rect2(41, 10, 12, 6)

[node name="Muzzle" type="Marker2D" parent="Turret/TurretHead/VisualRoot"]
position = Vector2(0.79999924, -0.43333328)
scale = Vector2(1.4285713, 1.4285713)

[node name="SFX_Shoot" type="AudioStreamPlayer2D" parent="Turret"]
stream = ExtResource("10_y4r1p")
bus = &"SFX"

[node name="Health" type="Node" parent="."]
script = ExtResource("8_smehm")
freeze_target_path = NodePath("../AnimatedSprite2D")
freeze_material = ExtResource("9_y4r1p")
poison_target_path = NodePath("../AnimatedSprite2D")
poison_material = ExtResource("10_d2wvv")
burn_target_path = NodePath("../AnimatedSprite2D")
burn_material = ExtResource("11_3v2ag")
use_gamestate = true

[node name="Ability" type="Node" parent="."]
script = ExtResource("9_ur7pv")

[node name="SFX_Empty" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_jej6c")
